# test_HQ

./: README.md  pyproject.toml
config/: settings.py  urls.py
content/: admin.py  models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_subject.py  0003_lesson_delete_subject.py  0004_alter_lesson_title.py  0005_group.py
